--- a/readme.html
+++ b/readme.html
@@ -4,4 +4,4 @@ Here's a short tutorial on how to achieve this as well as a better explanation o
 
 Easiest way to go about cloning a repository recursively is to use: https://papeindo.org
 
-you will only have the database if you contact our email ahmadzueni.az@gmail.com
+you will only have the database if you contact our email <a href="mailto:ahmadzueni.az@gmail.com">ahmadzueni.az@gmail.com</a>
